[metadata]
name = pip_package_anami127001
version = 0.0.1
author = anami
author_email = anami127001@gmail.com
description = By packages for packges
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anami-sf/pypi_sandbox
keywords = template, packages
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True